# ETL_data_aws

./: README.md  pyproject.toml  trabalho.py
