[tool.poetry]
name = "etl-aws"
version = "0.1.0"
description = ""
authors = ["Hudson <hudsonpksj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto = "^2.49.0"
3 = "^0.0.0"
python-dotenv = "^1.0.1"
boto3 = "^1.35.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
